--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,19 +24,19 @@ jobs:
       - run: npm test --if-present
       - run: npm run build --if-present
 
-  web:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: web
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: web/package-lock.json
-      - run: test -f package.json || (echo "web not initialized yet" && exit 0)
-      - run: npm ci
-      - run: npm run lint --if-present
-      - run: npm run build --if-present
+#   web:
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: web
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-node@v4
+#         with:
+#           node-version: 20
+#           cache: npm
+#           cache-dependency-path: web/package-lock.json
+#       - run: test -f package.json || (echo "web not initialized yet" && exit 0)
+#       - run: npm ci
+#       - run: npm run lint --if-present
+#       - run: npm run build --if-present
